2004-12-12  Guillaume Smet <guillaume-gforge@smet.org>

	* improved french localization of scmcvs plugin
	* fixed two parse errors in SVNPlugin
	* translated SVN plugin in French
	* finalized Grand Unified Search work based on Dominik Haas' patch [#833]
	* applied [#1012] Updated Dutch.tab (based on Gforge 3.3)
	* fixed RPM packaging and released new test RPMs

2004-12-12  Christian Bayle <bayle@aist.enst.fr>

	* Made some cleanup in Group.class so everything concerning System is
	done in System.class
	* Applied  Mathieu Peltier patch [#993] that generate scm snapshot
	* Removal of sys_default_theme_id in setup and register.php where it
	was only used.
	* Reorganisation of file in etc/httpd.d to handle multiple scm (SVN and
	CVS tested) on the same box
	
2004-12-11  Guillaume Smet <guillaume-gforge@smet.org>

	* applied [#1017] Important fix for Bulgarian.tab
	* applied [#1002] Update memberlist.php for new roles system by Greg Hudson
	* cosmetic fix in header title
	* minor fixes in french translation
	
2004-12-07  Dassault Aviation <guillaume.smet@openwide.fr>

	* improved RPM packaging and fixed bugs
	* fixed the grouplist page (license name and localized strings)
	* fixed global admin index
	* fixed typo in french translation
	
2004-12-07  Guillaume Smet <guillaume-gforge@smet.org>

	* added getXXXFromRequest in escapingUtils

2004-11-23  Tim Perdue <tim@gforge.org>

	* www/my/index.php and www/pm/ganttofuser.php - this gantt doesn't yet 
	work on my install, but I am comitting it hoping someone will test it.

2004-11-28  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/include/languages/PortugueseBrazilian.tab: Recoded to UTF-8.
	* www/include/languages/*.tab: Changed all conf/mail_charset
	values to UTF-8.
	
2004-11-26  Dassault Aviation <guillaume.smet@openwide.fr>

	* fixed JPGraph path in RPM configuration
	* RPM packaging for ldapextauth plugin

2004-11-23  Tim Perdue <tim@gforge.org>

	* fixed bug in tracker that prevented deletion of tracker