@@ -1544,6 +1544,8 @@ frs_admin	delete_release_warning	You are about to permanently and irretrievably 
 frs_admin	sure	I'm Sure
 frs_admin	really_sure	I'm Really Sure
 project_admin	add_user	Add User
+project_admin	acceptpending	Accept
+project_admin	rejectpending	Reject
 project_admin	addfromlist	Add Users From List
 project_admin	addfromlist1	Check the box next to the name of the user(s) you want to add. Your choices will be preserved if you click any of the letters below. When done, click "Finish" to choose the roles for the users you are adding.
 project_admin	addfromlist2	Choose the role for each user and then press &quot;Add All&quot;.
@@ -1862,6 +1864,17 @@ project_shownotes	notes	Notes:
 project_shownotes	release_name	Release Name:
 project_shownotes	section	Project: $1
 project_shownotes	title	File Release Notes and Changelog
+project_joinrequest	join_notice_subject	Request to Join Project $1
+project_joinrequest	request_link	Request to join
+project_joinrequest	join_notice_body	$1 has requested to join your project. You can approve this request on the project admin page. http://$2/project/admin/?group_id=$3
+project_joinrequest	submitted	Your request has been submitted.
+project_joinrequest	title	Request to join project
+project_joinrequest	joining	You can request to join a project by clicking the submit button. An administrator will be emailed to approve or deny your request.
+project_joinrequest	pending_requests	Pending Join Requests
+project_joinrequest	approved	You have been added to the $1 project.
+project_joinrequest	denied	Your request to join the $1 project was denied by the administrator.
+project_joinrequest	pending	Pending Requests
+project_joinrequest	nonepending	No Pending Requests
 project_stats	change_stats_view	Change Stats View
 project_stats	detailed_statistics	Detailed statistics for
 project_stats	last_30_days	Last 30 Days
